Fix double scrollbar

--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -80,7 +80,6 @@
   padding: 15px;
   background-color: #fff;
   border-radius: 8px;
-  overflow: scroll;
 }
 
 .lesson p {
